--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "puc-node-api-rest",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start":"node server",
     "test": "echo \"Error: no test specified\" && exit 1"
